More java 8 test issues